--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-numpy~=1.22.4
-scipy~=1.9.1
-pandas~=1.5.0
-scanpy~=1.9.1
-statsmodels~=0.13.2
-anndata~=0.8.0
+numpy
+scipy
+pandas
+statsmodels
+anndata
+scanpy
