--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install flake8 pytest pytest-cov git+https://github.com/saezlab/omnipath adjustText numpydoc
+        python -m pip install flake8 pytest pytest-cov git+https://github.com/saezlab/omnipath adjustText numpydoc setuptools
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Lint with flake8
       run: |
