--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,8 @@
 [tool.poetry]
-name = "liana-py"
+name = "liana"
 version = "1.0.0a0"
 description = "LIANA+: a one-stop-shop framework for cell-cell communication"
 authors = ["Daniel Dimitrov <daniel.dimitrov@uni-heidelberg.de>"]
-license = "GPLv3"
-readme = "README.md"
 classifiers = [
     "Development Status :: 3 - Alpha",
     "Topic :: Software Development :: Build Tools",
@@ -15,8 +13,11 @@ classifiers = [
     "Programming Language :: Python",
     "Natural Language :: English",
 ]
+license = "GPLv3"
+readme = "README.md"
 repository = "https://github.com/saezlab/liana-py"
 homepage = "https://liana-py.readthedocs.io"
+include = ["LICENSE"]
 
 [tool.poetry.dependencies]
 python = ">=3.8"
