--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,3 @@
-# This workflow will install Python dependencies, run tests and lint with a variety of Python versions
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
-
 name: Python package
 
 on:
@@ -15,7 +12,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.7", "3.9"]
+        python-version: ["3.8", "3.9"]
 
     steps:
     - uses: actions/checkout@v3
@@ -23,11 +20,12 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
+    - name: Install Poetry
+      run: |
+        curl -sSL https://install.python-poetry.org | python -
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        python -m pip install flake8 pytest pytest-cov git+https://github.com/saezlab/omnipath adjustText numpydoc setuptools
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        poetry install --extras "full"
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
@@ -53,11 +51,13 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.9
+    - name: Install Poetry
+      run: |
+        curl -sSL https://install.python-poetry.org | python -
+      # Note: Ensure you have a lock file 'poetry.lock' committed to the repository
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        python -m pip install flake8 pytest pytest-cov git+https://github.com/saezlab/omnipath adjustText IPython
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        poetry install --extras "full"
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
@@ -67,4 +67,3 @@ jobs:
     - name: Test
       run: |
         pytest --disable-warnings .
-
