--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,9 +34,13 @@ squidpy = {version = "*", optional = true}
 cell2cell = {version = "*", optional = true}
 muon = {version = "*", optional = true}
 mofax = {version = "*", optional = true}
+corneto = {git = "https://github.com/saezlab/corneto.git", tag = "0.9.1-alpha.3", optional = true}
+cvxpy = {version = "1.3.1", optional = true}
+cylp = {version = "0.91.5", optional = true}
 
 [tool.poetry.dev-dependencies]
 pytest = ">=6.0"
+pytest-cov = "*"
 sphinx = "^4.0"
 nbsphinx = "^0.8"
 sphinx_automodapi = "^0.14"
@@ -47,7 +51,7 @@ numpydoc = "^1.1"
 
 [tool.poetry.extras]
 common = ["decoupler", "omnipath"]
-full = ["decoupler", "omnipath", "pydeseq2", "squidpy", "cell2cell", "muon", "mofax"]
+full = ["decoupler", "omnipath", "pydeseq2", "squidpy", "cell2cell", "muon", "mofax", "corneto", "cvxpy", "cylp"]
 
 
 [build-system]
