--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ homepage = "https://liana-py.readthedocs.io"
 include = ["LICENSE"]
 
 [tool.poetry.dependencies]
-python = ">=3.8"
+python = ">=3.8 <3.12"
 anndata = ">=0.7.4"
 mudata = "*"
 scanpy = ">=1.8.0"
