--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,8 +35,8 @@ cell2cell = {version = "*", optional = true}
 muon = {version = "*", optional = true}
 mofax = {version = "*", optional = true}
 corneto = {git = "https://github.com/saezlab/corneto.git", tag = "0.9.1-alpha.3", optional = true}
-cvxpy = {version = "1.3.1", optional = true}
-cylp = {version = "0.91.5", optional = true}
+cvxpy = {version = "^1.2.1", optional = true}
+cylp = {version = "^0.91.5", optional = true}
 
 [tool.poetry.dev-dependencies]
 pytest = ">=6.0"
