--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "liana"
-version = "1.0.0a1"
+version = "1.0.0"
 description = "LIANA+: a one-stop-shop framework for cell-cell communication"
 authors = ["Daniel Dimitrov <daniel.dimitrov@uni-heidelberg.de>"]
 classifiers = [
@@ -53,7 +53,6 @@ numpydoc = "^1.1"
 [tool.poetry.extras]
 common = ["decoupler", "omnipath"]
 full = ["decoupler", "omnipath", "pydeseq2", "squidpy", "cell2cell", "muon", "mofax", "corneto", "cvxpy", "cylp"]
-
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
