--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ mofax = {version = "*", optional = true}
 corneto = {version = "0.9.1-alpha.4", optional = true}
 cvxpy = {version = "^1.2.1", optional = true}
 cylp = {version = "^0.91.5", optional = true}
+pre-commit = {version = ">=3.0.0", optional = true}
 
 [tool.poetry.dev-dependencies]
 pytest = ">=6.0"
