add data/ to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ share/python-wheels/
 MANIFEST
 .idea/
 .vscode/
+data/
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
