--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -5,6 +5,7 @@ build:
     python: "3.10"
 sphinx:
   configuration: docs/source/conf.py
+  fail_on_warning: false
 python:
   install:
   - method: pip
