--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ anndata = ">=0.7.4"
 mudata = "*"
 scanpy = ">=1.8.0"
 numba = ">=0.54.0"
+numpy = ">=1.23.3"
 plotnine = ">=0.10.0"
 tqdm = "^4.0"
 omnipath = {version = ">=1.0.6", optional = true}
