--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,6 @@ anndata = ">=0.7.4"
 mudata = "*"
 scanpy = ">=1.8.0"
 numba = ">=0.54.0"
-numpy = ">=1.23.4"
 plotnine = ">=0.10.0"
 tqdm = "^4.0"
 omnipath = {version = ">=1.0.6", optional = true}
@@ -42,6 +41,7 @@ cylp = {version = "^0.91.5", optional = true}
 pre-commit = {version = ">=3.0.0", optional = true}
 requests = {version = "^2.25.1", optional = true}
 docrep = ">=0.3.1"
+ecos = {version = "^2.0.13", optional = true}
 
 [tool.poetry.dev-dependencies]
 pytest = ">=6.0"
@@ -58,7 +58,7 @@ bumpversion = "^0.6.0"
 
 [tool.poetry.extras]
 common = ["decoupler", "omnipath", "requests"]
-full = ["decoupler", "omnipath", "pydeseq2", "squidpy", "cell2cell", "muon", "mofax", "mofapy2", "corneto", "cvxpy", "cylp", "requests"]
+full = ["decoupler", "omnipath", "pydeseq2", "squidpy", "cell2cell", "muon", "mofax", "mofapy2", "corneto", "ecos", "cvxpy", "cylp", "requests"]
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
