--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ include = ["LICENSE"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
-anndata = ">=0.7.4"
+anndata = ">=0.7.4,<=0.10.8"
 mudata = "*"
 scanpy = ">=1.8.0"
 numba = ">=0.54.0"
