--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ homepage = "https://liana-py.readthedocs.io"
 include = ["LICENSE"]
 
 [tool.poetry.dependencies]
-python = ">=3.8,<3.12"
+python = ">=3.10,<3.12"
 anndata = ">=0.7.4,<=0.10.8"
 mudata = "*"
 scanpy = ">=1.8.0"
@@ -34,9 +34,10 @@ cell2cell = {version = "*", optional = true}
 muon = {version = "*", optional = true}
 mofax = {version = "*", optional = true}
 mofapy2 = {version = ">=0.7.0", optional = true}
-corneto = {version = "0.9.1-alpha.5", optional = true}
-cvxpy = {version = ">=1.4,<1.5.0", optional = true}
-cylp = {version = "^0.91.5", optional = true}
+corneto = {version = "0.9.1-alpha.6", optional = true}
+cvxpy-base = {version = ">=1.6.0", optional = true}
+PySCIPOpt = {version = "^5.2.1", optional = true}
+highspy = {version = "^1.9.0", optional = true}
 pre-commit = {version = ">=3.0.0", optional = true}
 requests = {version = "^2.25.1", optional = true}
 docrep = ">=0.3.1"
